<resources>
    <string name="app_name">Project Aplikasi</string>
    <string name="text_icon">Icon Login</string>
    <string name="login">LOGIN</string>
    <string name="text_Email">Email</string>
    <string name="text_Password">Password</string>
    <string name="button_signin">SIGN IN</string>
    <string name="tSelamat">Selamat Datang</string>
    <string name="tKet">Silahkan cek data anda dibawah ini!</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Hasil Email</string>
    <string name="txPassword">Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="label3">Menu Pendaftaran</string>
    <string name="ldaftar">DAFTAR</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRepass">Masukkan Ulang Password</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="dataKontak">Data Kontak</string>
    <string name="namaItem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="infoNama">Nama    :</string>
    <string name="infoNotel">No.HP :</string>
    <string name="tNama">Nama</string>
    <string name="tNotel">No.HP</string>
</resources>